--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -124,7 +124,7 @@
 
 \title{Applied Philosophy of Science and Data Ethics}
 \author{Dr.~Carlos Vega}
-\date{2021: Last compiled: 2021-11-22}
+\date{2021: Last compiled: 2021-11-30}
 
 \begin{document}
 \maketitle
@@ -2014,7 +2014,7 @@ Although RCTs are still preferred to observational studies, there are scenarios 
 \hypertarget{origins-of-rcts}{%
 \subsection{Origins of RCTs}\label{origins-of-rcts}}
 
-R.A. Fisher (1890-1962) conceived the RCTs in the 1930s. Fisher designed intricate approaches to disentangle the effects of fertiliser from other variables. Using the \emph{Latin square}, he would divide the field into a grid of subplots to test each fertiliser with each combination of soil type and plant. However, in this scenario the experimenter would observe the effects of the fertiliser \emph{mixed} (i.e.~\emph{confounded}) with a variety of other things (e.g.~soil fertility, drainage, microflora). Fischer realised that the only design that would ``\emph{trick nature}'' is one where the fertilisers are assigned randomly to the subplots. Of course, sometimes you might be unlucky and assign a certain fertiliser to the least fertile subplots, but other times you might get the opposite assignment. A new random allocation is generated each time the experiment is conducted. By running the experiment multiple times the luck of each fertiliser is \emph{averaged}.
+R.A. Fisher (1890-1962) conceived the RCTs in the 1930s for its employment in agriculture experiments. Fisher designed intricate approaches to disentangle the effects of fertiliser from other variables. Using the \emph{Latin Square}, he would divide the field into a grid of subplots to test each fertiliser with each combination of soil type and plant. However, in this scenario the experimenter would observe the effects of the fertiliser \emph{mixed} (i.e.~\emph{confounded}) with a variety of other things (e.g.~soil fertility, drainage, microflora). Fischer realised that the only design that would ``\emph{trick nature}'' is one where the fertilisers are assigned randomly to the subplots. Of course, sometimes you might be unlucky and assign a certain fertiliser to the least fertile subplots, but other times you might get the opposite assignment. A new random allocation is generated each time the experiment is conducted. By running the experiment multiple times the luck of each allocation is \emph{averaged}.
 
 \begin{quote}
 But Fisher realized that an uncertain answer to the right question is much better than a highly certain answer to the wrong question. {[}\ldots{]} If you ask the right question, getting an answer that is occasionally wrong is much less of a problem. You can still estimate the amount of uncertainty in your answer, because the uncertainty comes from the randomization procedure (which is known) rather than the characteristics of the soil (which are unknown). --- Section ``Why RCTs work'' in Chapter 4 from \citep{book-of-why}
@@ -2050,7 +2050,7 @@ Most rodents used in biomedical studies --- the ones that suss out the effects o
 Of 2,347 articles reviewed, 618 included animals and/or cells. For animal research, 22\% of the publications did not specify the sex of the animals. Of the reports that did specify the sex, 80\% of publications included only males, 17\% only females, and 3\% both sexes. A greater disparity existed in the number of animals studied: 16,152 (84\%) male and 3,173 (16\%) female. --- \citep{yoon2014sex}
 \end{quote}
 
-Therefore, RCTs must be internally valid, --- i.e.~the design must eliminate the possibility of bias --- but to be clinically useful the result must also be relevant to a well-defined group of patients (i.e.~external validity). Differences between trial protocol and routine practice also affect the external validity of RCTs. In \citep{rothwell2006factors}, the authors list some of the most important potential determinants of external validity.
+Therefore, RCTs must be internally valid, --- i.e.~the design must eliminate the possibility of bias --- but to be clinically useful the result must also be relevant to a well-defined group of patients in a particular clinical setting (i.e.~external validity). Differences between trial protocol and routine practice also affect the external validity of RCTs. In \citep{rothwell2006factors}, the authors list some of the most important potential determinants of external validity.
 
 \hypertarget{cross-validation-in-machine-learning}{%
 \section{Cross-validation in Machine Learning}\label{cross-validation-in-machine-learning}}
@@ -2145,7 +2145,7 @@ An example of how data depends on its context is user ratings or opinions. For i
 
 Figure \ref{fig:inference-engine} represents an ideal causal inference engine for scientific questions. Today, causal models for scientific applications are based on a similar design. It is important to notice how this diagram showcases the importance of extra-observational information (i.e.~information other than data) such as \textbf{assumptions}, which derive from the available \textbf{knowledge}. With them, a \textbf{causal model} is built in any of its different forms, e.g.~logical statements, structural equations, causal diagrams, etc. Causation (or a causation assumption) can be defined from the following analogy, \(X\) is a cause of \(Y\) if \(Y\) \emph{listens} to \(X\) and determines its value in response to what it hears. For instance, the patient's lifespan \(L\) is determined by the intake of drug \(D\). In this case, \(D\) acts as a cause of \(L\) (although it might not be the only cause), which is represented by an arrow from \(D\) to \(L\) in a causal diagram (see Figure \ref{fig:blueprint}). For the sake of simplicity the other causes of \(L\) can be grouped in an additional variable \(Z\).
 
-In box \(4\) the patterns encoded in the paths of the causal model yields a series of observable consequences (or data dependencies), that we know as \textbf{testable implications} (remember the hypothetico-deductive method?). These implications can be used to test the model. For instance, the lack of path between \(D\) and \(L\) implies that \(D\) and \(L\) are independent, meaning that a variation of \(D\) will not alter \(L\). If such implication is contradicted by the data, the model should be revised bearing in mind this new knowledge. The box \(5\) is in charge of the scientific \textbf{query} which must be encoded in causal vocabulary, e.g.~\(P(L | do(D))\), i.e.~what is the probability that a typical patient would live \(L\) years given that it takes the drug \(D\)?.
+In box \(4\) the patterns encoded in the paths of the causal model yield a series of observable consequences (or data dependencies), that we know as \textbf{testable implications} (remember the hypothetico-deductive method?). These implications can be used to test the model. For instance, the lack of path between \(D\) and \(L\) would imply that \(D\) and \(L\) are independent, meaning that a variation of \(D\) will not alter \(L\). If such implication is contradicted by the data, the model should be revised bearing in mind this new knowledge. The box \(5\) is in charge of the scientific \textbf{query} which must be encoded in causal vocabulary, e.g.~\(P(L | do(D))\), i.e.~what is the probability that a typical patient would live \(L\) years given that it takes the drug \(D\)?.
 
 \begin{figure}
 
